# automatic_navigation

./: README.md
navigation_configurators/: CMakeLists.txt  README.md  package.xml
navigation_configurators/config/: default.yaml
navigation_configurators/navigation_configurators/: __init__.py
navigation_configurators/navigation_configurators/control/: __init__.py
navigation_configurators/navigation_configurators/control/omnidirectional_controller/: OmnidirectionalController.py
navigation_configurators/navigation_configurators/filtering/: __init__.py  robot_localization.py
navigation_configurators/navigation_configurators/localization/: __init__.py  nav2_amcl.py  neo_localization2.py
navigation_configurators/navigation_configurators/mapping/: __init__.py  slam_toolbox.py
navigation_configurators/navigation_configurators/planning/: __init__.py  navigation2.py
navigation_configurators/navigation_configurators/simulation/: __init__.py  gazebo.py
navigation_configurators/navigation_configurators/visualization/: __init__.py  rviz2.py
navigation_deployment/: CMakeLists.txt  README.md  package.xml
navigation_deployment/config/: default.yaml
navigation_deployment/launch/: automatic_navigation.launch.py  complete.launch.py  gui.launch.py  move.launch.py  navigate.launch.py  study_robot.launch.py
navigation_deployment/navigation_deployment/: __init__.py  study_robot.py  utils.py
navigation_deployment/scripts/: automatic_navigation_node.py  study_robot.py
navigation_launch_templates/: CMakeLists.txt  README.md  package.xml
navigation_launch_templates/launch/control/: control_frame_manager.launch.py
navigation_launch_templates/launch/filtering/: robot_localization.launch.py
navigation_launch_templates/launch/localization/: nav2_amcl.launch.py  neo_localization2.launch.py
navigation_launch_templates/launch/mapping/: slam_toolbox.launch.py
navigation_launch_templates/launch/planning/: navigation2.launch.py
navigation_launch_templates/launch/simulation/: gazebo.launch.py
navigation_launch_templates/launch/utils/: map_server.launch.py  robot.launch.py
navigation_launch_templates/launch/visualization/: rviz2.launch.py
navigation_launch_templates/scripts/control/: cmd_vel_converter.py  joy_switch_kinematic.py  switch_kinematic_manager.py
navigation_launch_templates/scripts/planning/: footprint_manager.py  nav2_plan_transformer.py  nav2_switch_manager.py
