<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_launch_templates</name>
  <version>0.0.1</version>
  <description>navigation_launch_templates package</description>
  <maintainer email="carlo.morganti@fraunhofer.it">Carlo Morganti</maintainer>
  <author>Carlo Morganti</author>
  <license>Apache 2.0</license>

  <depend>ament_cmake</depend>
  <depend>fhi_ros2</depend>
  <depend>fhi_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>